--- a/kubernetes/healthy-error-server.yaml
+++ b/kubernetes/healthy-error-server.yaml
@@ -20,4 +20,4 @@ spec:
             - containerPort: 80
           env:
             - name: PORT
-              value: 80
+              value: "80"
