--- a/kubernetes/healthy-error-server.yaml
+++ b/kubernetes/healthy-error-server.yaml
@@ -1,7 +1,9 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: ReplicaSet
 metadata:
   name: healthy-error-server
+  annotations:
+    traffic.spinnaker.io/load-balancers: '["service healthy-error-server"]'
 spec:
   replicas: 3
   selector:
@@ -21,3 +23,15 @@ spec:
           env:
             - name: PORT
               value: "80"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: healthy-error-server
+spec:
+  type: LoadBalancer
+  selector:
+    frontedBy: healthy-error-server
+  ports:
+    - port: 80
+      targetPort: 80
