--- a/.drone.yaml
+++ b/.drone.yaml
@@ -6,7 +6,7 @@ steps:
   - name: build-docker-image
     image: gcr.io/cloud-builders/docker
     commands:
-      - docker build -t gcr.io/is-eorzea-tominayu/healthy-error-server:latest
+      - docker build -t gcr.io/is-eorzea-tominayu/healthy-error-server:latest src/ -f src/Dockerfile
 
   - name: publish
     image: plugins/gcr
